2/05 redis pipeline 연습